ISSUE-410 Fixing for maven test